fix scrollbar-x

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 
 body {
     background-color: #7FB6F6;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 .soleil {
